fix latex code too large in x dimension

--- a/res/org.css
+++ b/res/org.css
@@ -83,13 +83,13 @@ code:before, code:after {content: "=";
 pre.src,p.verse,blockquote,pre.example,div.org-center p
 {padding-left:0.2em!important;}
 
-div.MathJax_Display{overflow:auto!important;}
+div.MathJax_Display{overflow-x:auto!important;}
 
 pre {color: var(--fg-color);
      border:none!important;
      padding:0!important;
      margin:0!important;
-     overflow:auto!important;
+     overflow-x:auto!important;
      background-color: var(--bg-color);}
 
 table, pre, p {margin-top:0.5em!important;}
